--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "test": "npm run test"
+    "start": "npm run build && npm run start:dev",
+    "start:dev": "ts-node src/app.ts",
+    "test": "npm run test",
+    "build": "tsc",
+    "prestart": "npm run build"
   },
   "author": "Madhawa97",
   "license": "ISC",
@@ -15,5 +19,8 @@
     "express": "^4.18.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
